--- a/AminWeb/Content/Styles/Pages/Index.scss
+++ b/AminWeb/Content/Styles/Pages/Index.scss
@@ -17,7 +17,7 @@
 
 .main-search {
     background: #F8F8F8;
-    height: 224px;
+    height: $White-Area-Height;
     overflow: hidden;
     padding-bottom: 16px;
 
