--- a/AminWeb/Content/Styles/_colors.scss
+++ b/AminWeb/Content/Styles/_colors.scss
@@ -2,6 +2,9 @@
 
 $Background: #EDEDED;
 
+$White-Area-Height: 224px;
+$White-Area-Background: #F8F8F8;
+
 $white: #fff;
 $white-mid: #EBEBEB;
 $white-dark: #D1D1D1;
