--- a/AminWeb/Content/Styles/Pages/VideoView.css
+++ b/AminWeb/Content/Styles/Pages/VideoView.css
@@ -164,60 +164,74 @@ backdrop-filter: saturate(80%);
 .text-center {
   text-align: center !important; }
 
-.media {
-  position: absolute;
-  left: 0;
-  top: 106px;
-  display: flex; }
-  .media > .column {
-    padding: 12px 8px;
-    background: #EFEFEF;
-    -moz-border-radius: 0 8px 8px 0;
-    -webkit-border-radius: 0 8px 8px 0;
-    border-radius: 0 8px 8px 0;
-    /* -moz-border-radius: 0;
+.video-playback {
+  width: 100%;
+  -moz-border-radius: 8px 8px 8px 8px;
+  -webkit-border-radius: 8px 8px 8px 8px;
+  border-radius: 8px 8px 8px 8px;
+  /* -moz-border-radius: 0;
     -webkit-border-radius: 0;
     border-radius: 0;*/
-    margin: auto 0; }
+  -moz-box-shadow: rgba(0, 0, 0, 0.12) 0 -6px 16px;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.12) 0 -6px 16px;
+  box-shadow: rgba(0, 0, 0, 0.12) 0 -6px 16px; }
 
-.main-search {
-  background: #F8F8F8;
-  height: 224px;
-  overflow: hidden;
-  padding-bottom: 16px; }
-  .main-search .search-box {
-    min-width: 48vw;
-    background: #fff;
-    -moz-box-shadow: rgba(0, 0, 0, 0.12) 0 0px 12px;
-    -webkit-box-shadow: rgba(0, 0, 0, 0.12) 0 0px 12px;
-    box-shadow: rgba(0, 0, 0, 0.12) 0 0px 12px;
-    -moz-border-radius: 10px 10px 10px 10px;
-    -webkit-border-radius: 10px 10px 10px 10px;
-    border-radius: 10px 10px 10px 10px;
-    /* -moz-border-radius: 0;
-    -webkit-border-radius: 0;
-    border-radius: 0;*/
-    border: 1px solid #ddd;
-    margin-top: 120px;
-    height: 36px;
-    padding: 10px 12px; }
-    .main-search .search-box button {
-      color: #8d8d8d;
-      margin: auto;
-      padding: 6px;
-      -moz-border-radius: 100% 100% 100% 100%;
-      -webkit-border-radius: 100% 100% 100% 100%;
-      border-radius: 100% 100% 100% 100%;
+.container {
+  width: 80%; }
+
+@media only screen and (max-width: 764px) {
+  .container {
+    width: 92%; } }
+
+@media only screen and (max-device-width: 764px) {
+  .container {
+    width: 92%; } }
+
+.price {
+  color: #66e828;
+  font-size: 24px; }
+  .price span {
+    margin-top: 10px;
+    margin-right: 2px;
+    font-size: 14px; }
+
+.control-panel {
+  display: flex;
+  flex-direction: row-reverse; }
+  .control-panel-top {
+    margin-right: auto !important; }
+    .control-panel-top .star-container {
+      background: #F5F5F5;
+      padding: 10px;
+      -moz-border-radius: 8px 8px 8px 8px;
+      -webkit-border-radius: 8px 8px 8px 8px;
+      border-radius: 8px 8px 8px 8px;
       /* -moz-border-radius: 0;
     -webkit-border-radius: 0;
-    border-radius: 0;*/
-      -moz-transition: all ease 0.3s;
-      -o-transition: all ease 0.3s;
-      -webkit-transition: all ease 0.3s;
-      transition: all ease 0.3s; }
-    .main-search .search-box button:hover {
-      background: #efefef; }
-    .main-search .search-box input {
-      width: 100%;
-      border: none;
-      font-size: 16px; }
+    border-radius: 0;*/ }
+      .control-panel-top .star-container .rate {
+        margin-top: 3px;
+        margin-left: 5px; }
+      .control-panel-top .star-container .raiting {
+        margin: auto 4px;
+        font-size: 14px;
+        color: #FFCC00; }
+  .control-panel .icon-button {
+    color: #AFAFAF; }
+  .control-panel .icon-button:hover {
+    color: #F94646; }
+  .control-panel .action-panel .icon-button {
+    margin: auto 8px; }
+
+@media only screen and (max-width: 950px) {
+  .control-panel {
+    display: flex;
+    flex-direction: column-reverse; }
+    .control-panel-top {
+      margin-right: auto !important; }
+    .control-panel-bottom {
+      margin-top: 16px; }
+      .control-panel-bottom .btn-primary {
+        margin-left: auto !important; }
+      .control-panel-bottom .price {
+        margin-right: auto !important; } }
