--- a/AminWeb/Views/Shared/_VideoBlock.cshtml
+++ b/AminWeb/Views/Shared/_VideoBlock.cshtml
@@ -1,4 +1,6 @@
-﻿<div class="video-block">
+﻿@*@model DataLayer.Models.TblVideo*@
+    
+<div class="video-block">
     <div class="top">
         <ul class="badges row ">
             <li uk-tooltip="title:آموزشگاهی">
@@ -7,25 +9,25 @@
             <li uk-tooltip="title:دارای مدرک">
                 <img src="~/Resources/Static/Vector/Medal.svg" height="24" width="24" alt="Badge" />
             </li>
-            <li uk-tooltip="title:حامی خیریه">
-                <img src="~/Resources/Static/Vector/Heart.svg" height="24" width="24" alt="Badge" />
-            </li>
+            @*<li uk-tooltip="title:حامی خیریه">
+                    <img src="~/Resources/Static/Vector/Heart.svg" height="24" width="24" alt="Badge" />
+                </li>*@
         </ul>
         <img class="thumbnail" height="200" width="360" src="https://picsum.photos/360/200" alt="Thumbnail" />
     </div>
     <div class="text column">
         <div class="content column">
-            <a class="title" contenteditable="true">
+            <a class="title">
                 این تیتر یک ویدیو می باشد
                 این تیتر یک ویدیو می باشد
                 این تیتر یک ویدیو می باشد
                 این تیتر یک ویدیو می باشد
             </a>
-            <p class="desciption" contenteditable="true">
+            <p class="desciption">
                 این توضیحات یک ویدیو می باشد بسار مختصر و مفید می باشد
                 این توضیحات یک ویدیو می باشد بسار مختصر و مفید می باشد
             </p>
-            <a class="tutor" uk-icon="tutor" href="">
+            <a class="tutor" uk-icon="tutor" href="#">
                 نام آپلود کننده
             </a>
         </div>
