--- a/AminWeb/Content/Styles/Areas/UserDashboard.css
+++ b/AminWeb/Content/Styles/Areas/UserDashboard.css
@@ -164,74 +164,68 @@ backdrop-filter: saturate(80%);
 .text-center {
   text-align: center !important; }
 
-.video-playback {
-  width: 100%;
-  -moz-border-radius: 8px 8px 8px 8px;
-  -webkit-border-radius: 8px 8px 8px 8px;
-  border-radius: 8px 8px 8px 8px;
+.side-category-placeholder {
+  width: 234px; }
+
+.side-category {
+  width: 200px; }
+  .side-category a {
+    margin: 8px 0; }
+
+.datalist {
+  display: flex;
+  flex-direction: row-reverse;
+  -ms-flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap; }
+  .datalist li {
+    display: flex;
+    flex-direction: column;
+    margin-left: 24px;
+    margin-top: 4px; }
+    .datalist li > label {
+      font-size: 15px;
+      color: #818181; }
+    .datalist li > span {
+      font-size: 20px;
+      color: #5C5C5C; }
+
+.wallet {
+  -moz-border-radius: 7px 8px 0 0;
+  -webkit-border-radius: 7px 8px 0 0;
+  border-radius: 7px 8px 0 0;
   /* -moz-border-radius: 0;
     -webkit-border-radius: 0;
     border-radius: 0;*/
-  -moz-box-shadow: rgba(0, 0, 0, 0.12) 0 -6px 16px;
-  -webkit-box-shadow: rgba(0, 0, 0, 0.12) 0 -6px 16px;
-  box-shadow: rgba(0, 0, 0, 0.12) 0 -6px 16px; }
+  background: #ffca7a;
+  background: -moz-linear-gradient(135deg, #ffca7a 0%, #f44a4a 100%);
+  background: -webkit-linear-gradient(135deg, #ffca7a 0%, #f44a4a 100%);
+  background: linear-gradient(135deg, #ffca7a 0%, #f44a4a 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ffca7a",endColorstr="#f44a4a",GradientType=1); }
+  .wallet * {
+    color: white; }
+  .wallet h4 {
+    margin: 0 auto 0 0; }
+    .wallet h4 span[role=heading] {
+      margin-top: 28px;
+      margin-right: 6px; }
+    .wallet h4 span[role=definition] {
+      font-size: 48px; }
 
-.container {
-  width: 80%; }
+.alert {
+  color: #EB3838; }
 
-@media only screen and (max-width: 764px) {
-  .container {
-    width: 92%; } }
+.warning {
+  color: #FFB31F; }
 
-@media only screen and (max-device-width: 764px) {
-  .container {
-    width: 92%; } }
+.success {
+  color: #73DA42; }
 
-.price {
-  color: #66e828;
-  font-size: 24px; }
-  .price span {
-    margin-top: 10px;
-    margin-right: 2px;
-    font-size: 14px; }
-
-.control-panel {
-  display: flex;
-  flex-direction: row-reverse; }
-  .control-panel-top {
-    margin-right: auto !important; }
-    .control-panel-top .star-container {
-      background: #F5F5F5;
-      padding: 10px;
-      -moz-border-radius: 8px 8px 8px 8px;
-      -webkit-border-radius: 8px 8px 8px 8px;
-      border-radius: 8px 8px 8px 8px;
-      /* -moz-border-radius: 0;
-    -webkit-border-radius: 0;
-    border-radius: 0;*/ }
-      .control-panel-top .star-container .rate {
-        margin-top: 3px;
-        margin-left: 5px; }
-      .control-panel-top .star-container .raiting {
-        margin: auto 4px;
-        font-size: 15px;
-        color: #FFCC00; }
-  .control-panel .icon-button {
-    color: #AFAFAF; }
-  .control-panel .icon-button:hover {
-    color: #F94646; }
-  .control-panel .action-panel .icon-button {
-    margin: auto 8px; }
-
-@media only screen and (max-width: 950px) {
-  .control-panel {
-    display: flex;
-    flex-direction: column-reverse; }
-    .control-panel-top {
-      margin-right: auto !important; }
-    .control-panel-bottom {
-      margin-top: 16px; }
-      .control-panel-bottom .btn-primary {
-        margin-left: auto !important; }
-      .control-panel-bottom .price {
-        margin-right: auto !important; } }
+.table-simple {
+  margin: 0;
+  width: 100%; }
+  .table-simple thead th {
+    padding-bottom: 12px;
+    border-bottom: 1px solid #dbdbdb; }
+  .table-simple tbody tr td {
+    padding: 6px 0; }
