--- a/AminWeb/Content/Styles/Controls.css
+++ b/AminWeb/Content/Styles/Controls.css
@@ -64,7 +64,7 @@ backdrop-filter: saturate(80%);
       width: 1em;
       white-space: nowrap;
       cursor: pointer;
-      font-size: 1.5rem; }
+      font-size: 3rem; }
       .star-container .star-cb-group > input + label:before {
         font-family: Times;
         display: inline-block;
@@ -246,14 +246,14 @@ backdrop-filter: saturate(80%);
   .top-nav > .logo {
     width: 50px; }
 
-a, details, summary {
+a, details, summary, .anchor {
   color: #505050;
   -moz-transition: all ease 0.3s;
   -o-transition: all ease 0.3s;
   -webkit-transition: all ease 0.3s;
   transition: all ease 0.3s; }
 
-a:hover, summary:hover {
+a:hover, summary:hover, .active {
   color: #F94646; }
 
 a.blue {
@@ -572,7 +572,7 @@ details, summary {
   padding: 8px 20px;
   cursor: pointer;
   text-align: center;
-  min-width: 170px; }
+  min-width: 150px; }
 
 .btn-primary {
   color: white;
@@ -630,3 +630,22 @@ details, summary {
   /* -moz-border-radius: 0;
     -webkit-border-radius: 0;
     border-radius: 0;*/ }
+
+.uk-notification-message {
+  background-color: #fff !important;
+  direction: rtl;
+  background: #fff;
+  -moz-border-radius: 8px 8px 8px 8px;
+  -webkit-border-radius: 8px 8px 8px 8px;
+  border-radius: 8px 8px 8px 8px;
+  /* -moz-border-radius: 0;
+    -webkit-border-radius: 0;
+    border-radius: 0;*/
+  border: 1px solid #D4D4D4;
+  -moz-box-shadow: rgba(0, 0, 0, 0.2) 0 0 1vw;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0 0 1vw;
+  box-shadow: rgba(0, 0, 0, 0.2) 0 0 1vw; }
+  .uk-notification-message .uk-notification-close {
+    direction: rtl; }
+  .uk-notification-message > div {
+    margin-right: 24px; }
